@@ -531,26 +531,43 @@ name|Method
 DECL|field|EXPRESSION_CTOR
 name|EXPRESSION_CTOR
 init|=
-name|getMethod
+name|getAsmMethod
 argument_list|(
-literal|"void<init>(String, String[])"
+name|void
+operator|.
+name|class
+argument_list|,
+literal|"<init>"
+argument_list|,
+name|String
+operator|.
+name|class
+argument_list|,
+name|String
+index|[]
+operator|.
+expr|class
 argument_list|)
 decl_stmt|,
 DECL|field|EVALUATE_METHOD
 name|EVALUATE_METHOD
 init|=
-name|getMethod
+name|getAsmMethod
 argument_list|(
-literal|"double evaluate(int, "
-operator|+
-name|FunctionValues
+name|double
 operator|.
 name|class
+argument_list|,
+literal|"evaluate"
+argument_list|,
+name|int
 operator|.
-name|getName
-argument_list|()
-operator|+
-literal|"[])"
+name|class
+argument_list|,
+name|FunctionValues
+index|[]
+operator|.
+expr|class
 argument_list|)
 decl_stmt|;
 DECL|field|DOUBLE_VAL_METHOD
@@ -567,13 +584,21 @@ operator|.
 name|Method
 name|DOUBLE_VAL_METHOD
 init|=
-name|getMethod
+name|getAsmMethod
 argument_list|(
-literal|"double doubleVal(int)"
+name|double
+operator|.
+name|class
+argument_list|,
+literal|"doubleVal"
+argument_list|,
+name|int
+operator|.
+name|class
 argument_list|)
 decl_stmt|;
-comment|// to work around import clash:
-DECL|method|getMethod
+comment|/** create an ASM Method object from return type, method name, and parameters. */
+DECL|method|getAsmMethod
 specifier|private
 specifier|static
 name|org
@@ -585,13 +610,27 @@ operator|.
 name|commons
 operator|.
 name|Method
-name|getMethod
+name|getAsmMethod
 parameter_list|(
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|rtype
+parameter_list|,
 name|String
-name|method
+name|name
+parameter_list|,
+name|Class
+argument_list|<
+name|?
+argument_list|>
+modifier|...
+name|ptypes
 parameter_list|)
 block|{
 return|return
+operator|new
 name|org
 operator|.
 name|objectweb
@@ -601,10 +640,20 @@ operator|.
 name|commons
 operator|.
 name|Method
-operator|.
-name|getMethod
 argument_list|(
-name|method
+name|name
+argument_list|,
+name|MethodType
+operator|.
+name|methodType
+argument_list|(
+name|rtype
+argument_list|,
+name|ptypes
+argument_list|)
+operator|.
+name|toMethodDescriptorString
+argument_list|()
 argument_list|)
 return|;
 block|}
@@ -1130,10 +1179,6 @@ operator||
 name|Opcodes
 operator|.
 name|ACC_FINAL
-operator||
-name|Opcodes
-operator|.
-name|ACC_SYNTHETIC
 argument_list|,
 name|COMPILED_EXPRESSION_INTERNAL
 argument_list|,
@@ -1196,10 +1241,6 @@ argument_list|(
 name|Opcodes
 operator|.
 name|ACC_PUBLIC
-operator||
-name|Opcodes
-operator|.
-name|ACC_SYNTHETIC
 argument_list|,
 name|EXPRESSION_CTOR
 argument_list|,
@@ -1249,10 +1290,6 @@ argument_list|(
 name|Opcodes
 operator|.
 name|ACC_PUBLIC
-operator||
-name|Opcodes
-operator|.
-name|ACC_SYNTHETIC
 argument_list|,
 name|EVALUATE_METHOD
 argument_list|,
